overflow fix

--- a/LottaYoga.nl/styles/partials/_setup.scss
+++ b/LottaYoga.nl/styles/partials/_setup.scss
@@ -6,6 +6,7 @@ html,
 }
 
 html {
+  background-color: #00598E;
   @media (max-width: 380px) {
     font-size: calc(1.12em + 0.25 * (100vw - 80em) / 40);
     font-size: -webkit-calc(112% + 0.25 * (100vw - 8000%) / 40);
@@ -33,14 +34,21 @@ body {
   scrollbar-width: none;
   scroll-behavior: smooth;
   width: 100vw;
+  height: 100%;
+overscroll-behavior: none;
 }
+
+
+
+
 
 body::-webkit-scrollbar {
   display: none;
 }
 
+
 .root {
-  min-height: 100vh;
+  height: -webkit-fill-available;
 }
 
 body,
@@ -101,4 +109,5 @@ section {
   display: grid;
   place-items: center;
   align-content: center;
+ 
 }
