--- a/LottaYoga.nl/styles/style.scss
+++ b/LottaYoga.nl/styles/style.scss
@@ -47,6 +47,7 @@
     min-height: 100vh;
     height: 100%;
     position: relative;
+    
 }
 
 .hero::before {
@@ -84,14 +85,14 @@
 
 @media (max-width: 1024px) {
     .logoLeft {
-        z-index: -2;
+     
         width: 100%;
     
 
         & img {
             position: absolute;
-            top: 20%;
-            width: 40%;
+            top: 25%;
+            width: 50%;
 
         }
     }
@@ -237,6 +238,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
+    background-color: #00598E;
     background-size: cover;
     background-position: bottom center;
     background-image: url("../pix/background/LottaYoga_BG_Soorten_Portrait@1x.jpg");
@@ -251,6 +253,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
+    background-color: #00598E;
     background-size: cover;
     background-position: bottom center;
     background-image: url("../../Foto/sitepic-4.jpg");
